# FintamathAndroid

./: .gitignore  .gitmodules  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/math_text_view/: math_text_view.html
app/src/main/assets/recognition_model/: model.tflite
app/src/main/res/drawable/: background_bar.xml  background_bar_button.xml  background_bar_button_pressed.xml  background_bar_enabled_button.xml  background_bar_enabled_button_normal.xml  background_camera_button.xml  background_camera_button_pressed.xml  background_control_key.xml  background_history_item.xml  background_history_item_bookmark.xml  background_history_item_bookmark_checked.xml  background_history_item_bookmark_checked_pressed.xml  background_history_item_bookmark_normal.xml  background_history_item_bookmark_pressed.xml  background_history_item_button.xml  background_history_item_button_normal.xml  background_keyboard.xml  background_menu.xml  background_open_keyboard_button.xml  background_popup_key.xml  background_quick_action_button.xml  background_quick_action_button_normal.xml  background_quick_action_popup.xml  background_recognition.xml  background_recognition_item.xml  background_rounded_corners.xml  background_switch_enabled_key.xml  background_switch_key.xml  background_switch_key_normal.xml  background_switch_key_pressed.xml  (+119 more)
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt
lib/src/: Fintamath.cpp  FintamathLib.cpp
opencv/: build.gradle
(+225 files in other folders)
